[gd_scene load_steps=64 format=3 uid="uid://kf3nir6ir55k"]

[ext_resource type="Script" uid="uid://cxksfqoykbdln" path="res://scenes/player/player.gd" id="1_hjaqi"]
[ext_resource type="Texture2D" uid="uid://cfebknotcgrqh" path="res://assets/player/animations/spritesheet (14).png" id="2_0owmy"]
[ext_resource type="Texture2D" uid="uid://cvdoewmeequdp" path="res://assets/player/animations/running.png" id="2_ct4mp"]
[ext_resource type="PackedScene" uid="uid://cj3p0w1h5b8ls" path="res://scenes/shadow/shadow.tscn" id="2_fvtld"]
[ext_resource type="Texture2D" uid="uid://mu47jekdubci" path="res://assets/player/animations/tp.png" id="4_oh5ij"]
[ext_resource type="Texture2D" uid="uid://c3wghgpt0ngmq" path="res://assets/player/animations/spritesheet (13).png" id="4_qek5x"]
[ext_resource type="Texture2D" uid="uid://6bqpke7iru2f" path="res://assets/player/animations/idle.png" id="4_s4jxa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hjaqi"]
radius = 5.6
height = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5gtgg"]
atlas = ExtResource("2_0owmy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17s1"]
atlas = ExtResource("2_0owmy")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7p5"]
atlas = ExtResource("2_0owmy")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm80t"]
atlas = ExtResource("2_0owmy")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1jg"]
atlas = ExtResource("2_0owmy")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugbui"]
atlas = ExtResource("2_0owmy")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs02"]
atlas = ExtResource("2_0owmy")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg7"]
atlas = ExtResource("2_0owmy")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlxm"]
atlas = ExtResource("2_0owmy")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5tr"]
atlas = ExtResource("2_0owmy")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqa7"]
atlas = ExtResource("2_0owmy")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydkj"]
atlas = ExtResource("2_0owmy")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j4b4"]
atlas = ExtResource("2_0owmy")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct4mp"]
atlas = ExtResource("4_s4jxa")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4jxa"]
atlas = ExtResource("4_s4jxa")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh5ij"]
atlas = ExtResource("4_s4jxa")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp4bs"]
atlas = ExtResource("4_s4jxa")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2vtq"]
atlas = ExtResource("4_s4jxa")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fvbb"]
atlas = ExtResource("4_s4jxa")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml7e8"]
atlas = ExtResource("4_s4jxa")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj68g"]
atlas = ExtResource("4_qek5x")
region = Rect2(0, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxgp"]
atlas = ExtResource("4_qek5x")
region = Rect2(128, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsyf"]
atlas = ExtResource("4_qek5x")
region = Rect2(256, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_007i1"]
atlas = ExtResource("4_qek5x")
region = Rect2(384, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cv16"]
atlas = ExtResource("4_qek5x")
region = Rect2(512, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4nxn"]
atlas = ExtResource("4_qek5x")
region = Rect2(640, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_28m0y"]
atlas = ExtResource("4_qek5x")
region = Rect2(768, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_uniwh"]
atlas = ExtResource("4_qek5x")
region = Rect2(1024, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqsei"]
atlas = ExtResource("4_qek5x")
region = Rect2(896, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_tffgl"]
atlas = ExtResource("4_qek5x")
region = Rect2(1152, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8ii"]
atlas = ExtResource("4_qek5x")
region = Rect2(1280, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mf0n"]
atlas = ExtResource("4_qek5x")
region = Rect2(1408, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hvnv"]
atlas = ExtResource("4_qek5x")
region = Rect2(1536, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbmj2"]
atlas = ExtResource("4_qek5x")
region = Rect2(1664, 0, 128, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihjo1"]
atlas = ExtResource("2_ct4mp")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7b46"]
atlas = ExtResource("2_ct4mp")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bup7g"]
atlas = ExtResource("2_ct4mp")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4wxg"]
atlas = ExtResource("2_ct4mp")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_34jf3"]
atlas = ExtResource("2_ct4mp")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk1vr"]
atlas = ExtResource("2_ct4mp")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4iqv"]
atlas = ExtResource("2_ct4mp")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ja17"]
atlas = ExtResource("2_ct4mp")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrjdb"]
atlas = ExtResource("4_oh5ij")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk4ol"]
atlas = ExtResource("4_oh5ij")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4reak"]
atlas = ExtResource("4_oh5ij")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt23p"]
atlas = ExtResource("4_oh5ij")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8m7u"]
atlas = ExtResource("4_oh5ij")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qucqc"]
atlas = ExtResource("4_oh5ij")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsw3c"]
atlas = ExtResource("4_oh5ij")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1uwf"]
atlas = ExtResource("4_oh5ij")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ie14"]
atlas = ExtResource("4_oh5ij")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8el"]
atlas = ExtResource("4_oh5ij")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_42h83"]
atlas = ExtResource("4_oh5ij")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_42h83"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gtgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm80t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugbui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j4b4")
}],
"loop": false,
"name": &"death",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct4mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4jxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh5ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp4bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2vtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fvbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml7e8")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj68g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_007i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cv16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4nxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28m0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uniwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqsei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tffgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mf0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mf0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hvnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hvnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hvnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbmj2")
}],
"loop": true,
"name": &"jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihjo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7b46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bup7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4wxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34jf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk1vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4iqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ja17")
}],
"loop": true,
"name": &"run",
"speed": 19.0
}, {
"frames": [{
"duration": 0.61,
"texture": SubResource("AtlasTexture_jrjdb")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_kk4ol")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_4reak")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_wt23p")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_k8m7u")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_qucqc")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_xsw3c")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_l1uwf")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_8ie14")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_pk8el")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_42h83")
}],
"loop": false,
"name": &"tp",
"speed": 18.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ct4mp"]
polygon = PackedVector2Array(4.13408, 2.3119, 0.689014, 2.68935, -2.75605, 2.3119, -2.75605, 0.802087, -2.75605, -0.330271, -2.75605, -1.84008, 0.689014, -2.21754, 4.13408, -1.84008, 4.13408, 0.235908, 4.13408, 1.17954)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(1.25, 1.25)
collision_layer = 3
collision_mask = 3
platform_wall_layers = 3
script = ExtResource("1_hjaqi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_hjaqi")

[node name="pivot" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="pivot"]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_42h83")
animation = &"death"

[node name="ShadowDirection" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 1)
target_position = Vector2(1200, 0)

[node name="Shadow" parent="." instance=ExtResource("2_fvtld")]
position = Vector2(820, 0)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(1.16108, -4.23894)
occluder = SubResource("OccluderPolygon2D_ct4mp")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.112
one_shot = true

[node name="TeleportCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TeleportCooldownTimer" to="." method="_on_teleport_cooldown_timer_timeout"]
